--- a/kadai5-2.html
+++ b/kadai5-2.html
@@ -1,20 +1,49 @@
+<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>演習課題5-2：外部APIの呼び出しテスト</title>
 </head>
 <body>
-    <h1 id="msg">何かのAPI</h1>
-    <form name="apiform"><p>
-        何かのフォーム：<input type="text" name="form_data">
-        <button type="button" id="btn1" onclick="some_api(this.form)">実行</button>
-    </p></form>
-    
-    <div id="result"></div>
+    <h1 id="msg">Agify API：名前から年齢を予測！</h1>
+
+    <!-- 入力フォーム -->
+    <form name="apiform">
+        <p>
+            名前を入力（例：john）：
+            <input type="text" name="form_data" placeholder="名前を英語で入力">
+            <button type="button" id="btn1" onclick="some_api(this.form)">実行</button>
+        </p>
+    </form>
+
+    <!-- 結果表示用 -->
+    <div id="result">ここに年齢予測結果が表示されます</div>
+
     <script>
         async function some_api(myForm) {
-            // ここにコードを書く
-            document.getElementById("result").innerHTML += myForm.form_data.value+"<br />";
+            const name = myForm.form_data.value.trim();
+            if (!name) {
+                document.getElementById("result").innerHTML = "名前を入力してください。";
+                return;
+            }
+
+            const apiUrl = `https://api.agify.io?name=${encodeURIComponent(name)}`;
+
+            try {
+                const response = await fetch(apiUrl);
+                const data = await response.json();
+
+                if (data.age !== null) {
+                    document.getElementById("result").innerHTML =
+                        `名前「${data.name}」の推定年齢は <strong>${data.age}歳</strong> です（推測元データ数：${data.count}件）。`;
+                } else {
+                    document.getElementById("result").innerHTML = `名前「${data.name}」に関する情報は見つかりませんでした。`;
+                }
+            } catch (error) {
+                document.getElementById("result").innerHTML = "エラーが発生しました：" + error.message;
+            }
+
+            // フォームをリセット
             document.apiform.reset();
         }
     </script>
